--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-image: url('fondo.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 header {
