--- a/style.css
+++ b/style.css
@@ -101,6 +101,10 @@ main {
   padding: 10px;
 }
 
+main h1 {
+  font-size: min(15vw, 4em);
+}
+
 /* Style the footer */
 footer {
   background-color: #777;
@@ -117,4 +121,28 @@ footer {
   }
 }
 
+.name {
+  font-weight: bold;
+}
+
+#contactForm {
+  max-width: 400px;
+  margin: 0 auto;
+}
+#contactForm input,
+#contactForm textarea {
+  width: 100%;
+  margin-bottom: 15px;
+  padding: 8px;
+}
+#contactForm button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+#contactForm button:hover {
+  background-color: #0056b3;
+}
 
