--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   background-image: url('fondo.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: #1b1b32;
 }
 
 header {
