--- a/style.css
+++ b/style.css
@@ -70,14 +70,14 @@ nav > ul > li > a {
 section {
   color: #ffffff;
   display: -webkit-flex;
-  display: flex;
+  display: flex 3 0px;
 }
 
 /* Style the navigation menu */
 aside {
   -webkit-flex: 1;
   -ms-flex: 1;
-  flex: 1;
+  flex: 0 0 2em;
   padding: 20px;
   flex-direction: column
   color: linen;
@@ -96,14 +96,19 @@ aside > ul > li > a {
 
 /* Style the content */
 main {
-  -webkit-flex: 3;
-  -ms-flex: 3;
-  flex: 3;
+  -webkit-flex: 2;
+  -ms-flex: 2;
+  flex: 2;
   padding: 10px;
 }
 
 main h1 {
   font-size: min(15vw, 4em);
+}
+
+.result  { 
+  flex: 1;
+  width: 250px;
 }
 
 /* Style the footer */
